refactor(EngineValidatorTester, InputMessageValidationTester, RotorOrderingConsistencyTester): improve exception handling and test output clarity